tests/snapshots/examples_fixtures/diagnostics_demos__errors__expected_token_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/errors/expected_token_error.flx
== compile ==
failed (parse)
== diagnostics ==
error[E076]: Missing Closing Delimiter

Expected a closing `)` to match this opening `(`.

  examples/diagnostics_demos/errors/expected_token_error.flx:2:10
  |
2 |     print((1 + 2);
  |          ^

Note:
  while parsing function `main`

note: Expected `)` before this token.
  examples/diagnostics_demos/errors/expected_token_error.flx:2:18
  |
2 |     print((1 + 2);
  |                  ^
== stdout ==
<not executed>
